src/components/screens/createCarForm/СreateCarForm.module.css
.dFlex {
	display: flex;
	align-items: start;
}
.form,
.card {
	padding: 0rem 0.625rem 0.625rem 0.625rem;
}
.form button {
	margin-left: 0.1875rem;
}
.inputCon {
	position: relative;
	margin-bottom: 2.5rem;
}
.errorMessage {
	position: absolute;
	right: 0;
	top: 0rem;
	display: flex;
	align-items: center;
	cursor: pointer;
	color: #db1212;
	border-radius: 0.3125rem;
	white-space: nowrap;
	z-index: 6;
	i {
		margin-right: 0.3125rem;
		font-size: 1.5625rem;
	}
	p {
		display: none;
		background-color: #f00;
		color: #f7f7f7;
		padding: 0.3125rem;
		border-radius: 0.3125rem;
		white-space: nowrap;
		position: absolute;
		top: -2.5rem;
		left: 0;
	}
	&:hover p {
		display: block;
	}
}
.BaseInput {
	width: 100%;
	padding: 0.625rem;
}

